# RTC-LLM

./: Dockerfile  Makefile  README.md  app.py  app_rtc.py  docker-install.sh  miniconda-install.sh  pyproject.toml
rtc_service/: .gitignore  __init__.py  pre_install.sh
rtc_service/configs/: config.py
rtc_service/controller/: __init__.py  audio_process.py  data_stream.py  event_handler.py  radio_stream.py  receiver_audio_stream.py  record_session.py  sender_audio_stream.py  video_stream.py
src/controller/: inference.py  media_handler.py  peer_conn_server.py  peer_connection_manager.py  receiver_audio_stream.py  sender_audio_stream.py
src/streams/: data_stream.py  radio_stream.py  video_stream.py
